chore(plugin): remove plugin

--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "homepage": "https://github.com/murshidazher/react-parcel-starter",
   "author": "Murshid Azher",
   "license": "ISC",
-  "main": "src/App.js",
-  "directories": {
-    "src": "src"
-  },
+  "main": "src/index.html",
   "scripts": {
     "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
